# jeslie0.github.io

./: .gitignore  README.org  ReadMe.org  blog.html  build-site.el  build.sh  cabal.project  contact.html  contact.org  flake.nix  index.html  index.org  index.org.metadata  mohabat.html  my-site.cabal  projects.org  rss.xml  site.hs
.github/: publish.yml
RSS/: 2018-04-15-Monoidal-Categories.html  2018-4-23-Yoneda-Yoneda-Yoneda.html  2018-6-30-Categories-of-elements.html  2018-7-7-Why-isn't-every-category-isomorphic-to-its-opposite.html  2019-04-15-is-zero-a-natural-number.html  2019-1-12-A-group-object-in-the-category-of-groups.html  2021-03-05-Zoom-screen-sharing.html  2021-03-06-Canonical-Model-Structure-on-Cat.html  2021-06-08-Stoicism-and-raising-a-puppy.html  2022-02-18-test.html  archive.html  archive.html~  index.html  index.html~  rss.xml  rss.xml~  tags.html
blog/: 2018-04-15-Monoidal-Categories.html  2018-04-15-Monoidal-Categories.org  2018-04-23-Yoneda-Yoneda-Yoneda.html  2018-04-23-Yoneda-Yoneda-Yoneda.org  2018-06-30-Categories-of-elements.html  2018-07-07-Why-isn't-every-category-isomorphic-to-its-opposite.html  2018-07-07-Why-isn't-every-category-isomorphic-to-its-opposite.org  2019-01-12-A-group-object-in-the-category-of-groups.html  2019-01-12-A-group-object-in-the-category-of-groups.org  2019-04-15-is-zero-a-natural-number.html  2019-04-15-is-zero-a-natural-number.org  index.html  (+6 more)
hakyll/: Hakyll.cabal  cabal.project
hakyll/src/: ColourFilter.hs  Compilers.hs  Contexts.hs  Feed.hs  GitCommit.hs  Main.hs  MetaData.hs  Metadata.hs  Routes.hs
(+136 files in other folders)
