cabal-version:      2.4
name:               Blog
version:            0.1.0.0

author:             James Leslie
maintainer:         jamesleslie@posteo.net


executable hakyll
    main-is:          Main.hs

    build-depends:    base,
                      hakyll,
                      pandoc,
                      process,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010
