cabal-version:      2.4
name:               HakyllBlogBuilder
version:            0.1.0.0

author:             James Leslie
maintainer:         jamesleslie@posteo.net


executable hakyll
    main-is:          Main.hs

    build-depends:    aeson,
                      base,
                      bytestring,
                      containers,
                      directory,
                      hakyll,
                      filepath,
                      pandoc,
                      pandoc-types,
                      process,
                      regex-base,
                      regex-tdfa,
                      text,
                      time,
                      uri-encode
    hs-source-dirs:   src
    default-language: Haskell2010
